Improve logs and sonar